Nav spacing fix

--- a/blog/static/blog/css/style.css
+++ b/blog/static/blog/css/style.css
@@ -142,7 +142,6 @@ a:hover {
 }
 .main-nav__item::after {
   content: "/";
-  margin-left: 5px;
 }
 .main-nav__item:last-child::after {
   content: "";
